# url-shortener

./: .env.example  Makefile  docker-compose.dev.yaml  docker-compose.dev.yml
backend/: Dockerfile  pyproject.toml
backend/src/core/: settings.py
backend/src/core/settings/: common.py  database.py
